# RVV-Parquet-Test

./: CMakeLists.txt  query1.cpp  query12.cpp  query4.cpp  query6.cpp  query9.cpp  readme.md  run.sh  rvv_query1.cpp  rvv_query12.cpp  rvv_query4.cpp  rvv_query6.cpp  rvv_query9.cpp
